--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,13 @@
 {
   "parserOptions": {
     "sourceType": "module",
-    "ecmaVersion": 8
+    "ecmaVersion": 7
   },
   "env": {
     "node": true,
     "browser": true,
-    "mocha": true
-  },
-  "globals": {
-    "basis": true,
-    "resource": true,
-    "asset": true,
-    "rempl": true
+    "mocha": true,
+    "es6": true
   },
   "extends": [
     "eslint:recommended"
